--- a/.docker/000-default.conf
+++ b/.docker/000-default.conf
@@ -8,6 +8,16 @@
         Require all granted
     </Directory>
 
+    # Permitir o acesso ao diretório uploads
+    <Directory "/var/www/html/app/uploads">
+        Options Indexes FollowSymLinks
+        AllowOverride None
+        Require all granted
+    </Directory>
+
+    # Alias para acessar o diretório uploads
+    Alias /uploads /var/www/html/app/uploads
+
     ErrorLog ${APACHE_LOG_DIR}/error.log
     CustomLog ${APACHE_LOG_DIR}/access.log combined
 </VirtualHost>
