--- a/.docker/000-default.conf
+++ b/.docker/000-default.conf
@@ -1,15 +1,15 @@
 <VirtualHost *:80>
     ServerAdmin webmaster@localhost
-    DocumentRoot /var/www/html
+    DocumentRoot /var/www/html/public
 
-    <Directory /var/www/html>
-        Options Indexes FollowSymLinks MultiViews
+    <Directory /var/www/html/public>
+        Options Indexes FollowSymLinks
         AllowOverride All
         Require all granted
     </Directory>
 
     # Permitir o acesso ao diretório uploads
-    <Directory "/var/www/html/app/uploads">
+    <Directory /var/www/html/app/uploads>
         Options Indexes FollowSymLinks
         AllowOverride None
         Require all granted
