Variáeis de ambiente movida para o arquivo env

--- a/.env
+++ b/.env
@@ -4,3 +4,9 @@ APACHE_RUN_GROUP=www-data
 APACHE_RUN_DIR=/var/run/apache2$SUFFIX
 APACHE_LOCK_DIR=/var/lock/apache2$SUFFIX
 APACHE_LOG_DIR=/var/log/apache2$SUFFIX
+
+MYSQL_ROOT_PASSWORD=admin
+MYSQL_DATABASE=patinhas
+MYSQL_USER=wellington
+MYSQL_PASSWORD=Univesp2022
+PMA_HOST=database
