--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,11 +19,7 @@ services:
     command: --default-authentication-plugin=mysql_native_password
     restart: always
     container_name: patinhas_db
-    environment:
-      MYSQL_ROOT_PASSWORD: admin
-      MYSQL_DATABASE: patinhas
-      MYSQL_USER: wellington
-      MYSQL_PASSWORD: Univesp2022
+    env_file: .env
     volumes:
       - db_data:/var/lib/mysql
       - ./sql/create_tables.sql:/docker-entrypoint-initdb.d/create_tables.sql
@@ -35,9 +31,7 @@ services:
   phpmyadmin:
     image: phpmyadmin/phpmyadmin:latest
     container_name: patinhas_phpmyadmin
-    environment:
-      PMA_HOST: database
-      MYSQL_ROOT_PASSWORD: admin
+    env_file: .env
     ports:
       - "8081:80"
     depends_on:
@@ -47,7 +41,6 @@ services:
 
 volumes:
   db_data:
-
 
 networks:
   app-network:
