--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,8 +15,8 @@ services:
       - app-network
 
   database:
-    #image: arm64v8/mysql:8.0
-    image: mysql:8.0
+    image: arm64v8/mysql:8.0
+    # image: mysql:8.0
     command: --default-authentication-plugin=mysql_native_password
     restart: always
     container_name: patinhas_db
@@ -42,6 +42,7 @@ services:
 
 volumes:
   db_data:
+
 
 networks:
   app-network:
